--- a/manifest.json
+++ b/manifest.json
@@ -1,9 +1,9 @@
 {
 	"id": "obsidian-hat-daily",
 	"name": "Hat Daily",
-	"version": "0.0.1",
+	"version": "0.1.0",
 	"minAppVersion": "0.15.0",
-	"description": "Three columns for daily journaling",
+	"description": "Three columns daily journaling",
 	"author": "hat_cloud",
 	"isDesktopOnly": false
 }
